--- a/views/items.hbs
+++ b/views/items.hbs
@@ -1,5 +1,5 @@
-<h1>Bag of Holding</h1>
-<p>Currently holding: {{items.results.length}} items</p>
+<h1>All Magic Items</h1>
+<p>Total Items: {{items.results.length}} of {{items.count}}</p>
 
 <table class="table table-bordered table-hover table-striped">
   <tr>
