--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,16 +1,21 @@
 <h1>Create Item</h1>
 
-<form action="/items/create" method="post">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" name="name" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="name">Name</label>
-    <textarea name="desc" id="desc" cols="30" rows="5"></textarea>
-  </div>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <form action="/items/create" method="post">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" name="name" class="form-control">
+      </div>
 
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+      <div class="form-group">
+        <label for="desc">Description</label>
+        <textarea name="desc" id="desc" rows="5" class="form-control"></textarea>
+      </div>
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+      </div>
+    </form>
   </div>
-</form>
+</div>
