Add create item controller and new page

--- a/views/item.hbs
+++ b/views/item.hbs
@@ -1,3 +1,5 @@
 <h1>{{item.name}}</h1>
+<p>{{item.type}}, {{item.rarity}} Item</p>
 
 <p>{{item.desc}}</p>
+<p>Requires Attunement? {{#if item.requires_attunement}} Yes {{else}} No {{/if}}</p>
