--- a/views/create.hbs
+++ b/views/create.hbs
@@ -14,6 +14,30 @@
       </div>
 
       <div class="form-group">
+        <label for="type">Type</label>
+        <select name="type" class="form-control">
+          <option></option>
+          <option value="Wondrous">Wondrous</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="rarity">Rarity</label>
+        <select name="rarity" class="form-control">
+          <option></option>
+          <option value="Common">Common</option>
+          <option value="Uncommon">Uncommon</option>
+          <option value="Rare">Rare</option>
+          <option value="Very Rare">Very Rare</option>
+          <option value="Legendary">Legendary</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="requires_attunement">Requires Attunement?</label>
+        <input type="checkbox" name="requires_attunement" class="form-control">
+      </div>
+      <div class="form-group">
         <button type="submit" class="btn btn-primary btn-lg">Submit</button>
       </div>
     </form>
