--- a/views/item.hbs
+++ b/views/item.hbs
@@ -1,3 +1,9 @@
+{{#if success}} 
+  <div class="alert alert-success">
+    {{success}}
+  </div>
+ {{/if}}
+ 
 <h1>{{item.name}}</h1>
 <p>{{item.type}}, {{item.rarity}} Item</p>
 
