--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,3 +1,13 @@
+{{#if errors}} 
+  <div class="alert alert-danger">
+    <ul>
+    {{#each errors }}
+      <li>{{this}}</li>
+    {{/each}}
+    </ul>
+  </div>
+ {{/if}}
+
 <h1>Create Item</h1>
 
 <div class="row">
