--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,5 +1,7 @@
+<h1>Create Item</h1>
+
 {{#if errors}} 
-  <div class="alert alert-danger">
+  <div class="alert alert-danger"></div>
     <ul>
     {{#each errors }}
       <li>{{this}}</li>
@@ -7,9 +9,7 @@
     </ul>
   </div>
  {{/if}}
-
-<h1>Create Item</h1>
-
+ 
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <form action="/items/create" method="post">
