Consolidate item routes

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,7 +25,9 @@
       ({{requires_attunement}})
       {{/if}}
     </td>
-    <td></td>
+    <td>
+      <button class="btn btn-danger">Remove</button>
+    </td>
   </tr>
   {{/each}}
 </table>
