--- a/views/create.hbs
+++ b/views/create.hbs
@@ -20,7 +20,7 @@
 
       <div class="form-group">
         <label for="desc">Description</label>
-        <textarea name="desc" id="desc" rows="5" class="form-control"></textarea>
+        <textarea name="desc" rows="5" class="form-control"></textarea>
       </div>
 
       <div class="form-group">
