Add helper function for checkboxes

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -35,18 +35,18 @@
       <div class="form-group">
         <label for="rarity">Rarity</label>
         <select name="rarity" class="form-control">
-          <option></option>
-          <option value="Common">Common</option>
-          <option value="Uncommon">Uncommon</option>
-          <option value="Rare">Rare</option>
-          <option value="Very Rare">Very Rare</option>
-          <option value="Legendary">Legendary</option>
+          <option>{{item.rarity}}</option>
+          <option value="common" {{isSelected item.rarity "common"}}>Common</option>
+          <option value="uncommon" {{isSelected item.rarity "uncommon"}}>Uncommon</option>
+          <option value="rare" {{isSelected item.rarity "rare"}}>Rare</option>
+          <option value="very rare" {{isSelected item.rarity "very rare"}}>Very Rare</option>
+          <option value="legendary" {{isSelected item.rarity "legendary"}}>Legendary</option>
         </select>
       </div>
 
       <div class="form-group">
         <label for="requires_attunement">Requires Attunement?</label>
-        <input type="checkbox" name="requires_attunement" class="form-control" value="{{{item.requires_attunement}}}">
+        <input type="checkbox" name="requires_attunement" class="form-control" {{isChecked item.requires_attunement }}>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-lg">Submit</button>
