--- a/views/items.hbs
+++ b/views/items.hbs
@@ -42,8 +42,8 @@
       {{/if}}
     </td>
     <td>      
-      <button class="btn btn-primary">Edit</button>
-      <button class="btn btn-danger">Delete</button>
+      <a href="{{slug}}/edit" class="btn btn-primary">Edit</a>
+      {{!-- <a href="{{slug}}/delete" class="btn btn-danger">Delete</a> --}}
     </td>
   </tr>
   {{/each}}
