--- a/views/create.hbs
+++ b/views/create.hbs
@@ -11,7 +11,7 @@
  {{/if}}
  
 <div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
+  <div class="col-sm-12">
     <form action="/items/create" method="post">
       <div class="form-group">
         <label for="name">Name</label>
@@ -44,8 +44,10 @@
       </div>
 
       <div class="form-group">
-        <label for="requires_attunement">Requires Attunement?</label>
-        <input type="checkbox" name="requires_attunement" class="form-control">
+        <div class="form-check">
+          <input type="checkbox" name="requires_attunement" class="form-check-input">
+          <label for="requires_attunement" class="form-check-label">Requires Attunement?</label>
+        </div>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-lg">Submit</button>
