--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,7 +1,7 @@
 <h1>Editing {{ item.name }}</h1>
 
 {{#if errors}} 
-  <div class="alert alert-danger"></div>
+  <div class="alert alert-danger">
     <ul>
     {{#each errors }}
       <li>{{this}}</li>
@@ -11,7 +11,7 @@
  {{/if}}
  
 <div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
+  <div class="col-sm-12">
     <form action="/items/{{{item.slug}}}" method="post">
       <div class="form-group">
         <label for="name">Name</label>
@@ -45,11 +45,14 @@
       </div>
 
       <div class="form-group">
-        <label for="requires_attunement">Requires Attunement?</label>
-        <input type="checkbox" name="requires_attunement" class="form-control" {{isChecked item.requires_attunement }}>
+        <div class="form-check">
+          <input type="checkbox" name="requires_attunement" class="form-check-input" {{isChecked item.requires_attunement }}>
+          <label for="requires_attunement" class="form-check-label">Requires Attunement?</label>
+        </div>
       </div>
+
       <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+        <button type="submit" class="btn btn-primary btn-lg">Update</button>
       </div>
     </form>
   </div>
