Add delete items route

--- a/views/items.hbs
+++ b/views/items.hbs
@@ -43,7 +43,7 @@
     </td>
     <td>      
       <a href="/items/{{slug}}/edit" class="btn btn-primary">Edit</a>
-      {{!-- <a href="{{slug}}/delete" class="btn btn-danger">Delete</a> --}}
+      <a href="/items/{{slug}}/delete" class="btn btn-danger">Delete</a>
     </td>
   </tr>
   {{/each}}
