--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <h1>Bag of Holding</h1>
-<p>Currently holding: {{items.results.length}} items</p>
+<p>Currently holding: # {{items.length}} items</p>
 
 <table class="table table-bordered table-hover table-striped">
   <tr>
@@ -9,7 +9,14 @@
     <th scope="col">Attunement?</th>
     <th></th>
   </tr>
-  {{#each items.results}}
+  {{#unless items}}
+  <tr>
+    <td colspan="5">
+      Bag is currently empty.
+    </td>
+  </tr>
+   {{/unless}}
+  {{#each items}}
   <tr>
     <td>
       <a href="item/{{slug}}">{{name}}</a>
